test/error/syntax/err3.rzy
// use of reserved keyword (R) as template argument name

Rec{R:Any} = Record
  a : R;
end

Err3 = Elementary
  dat: Rec{Boolean} = a := False;
end

